istio/auth.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: service-httpbin.default.svc.cluster.local
  namespace: default
spec:
  rules:
  - from:
    - source:
        principals:
        - old-td/ns/duplicate/*
    to:
    - operation:
        methods:
        - GET
  selector:
    matchLabels:
      app: httpbin
